<resources>
    <!--app名称-->
    <string name="app_name">凯城家园</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pls_input_mailbox_or_mobile">请使用手机号</string>
    <string name="pls_set_6_20_password">设置6-20位登录密码</string>

    <!--通用-->
    <string name="confirm">确认</string>
    <string name="sorry_find_no_result">抱歉，未找到结果</string>
    <string name="search">搜  索</string>
    <string name="pls_input_keyword">请输入关键字</string>

    <!-- 登录-->
    <string name="password">密码</string>
    <string name="login_btn">立即登录</string>
    <string name="login_text">登录</string>
    <string name="forget_password">忘记密码? </string>
    <string name="regest">注  册</string>
    <string name="regest_login">立即注册</string>
    <string name="visiter">游  客</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="mobile_not_empty">手机号不可为空</string>
    <string name="mobile_wrong_format">手机号格式不正确</string>
    <string name="log_out">退出登录</string>

    <!--主页-->
    <string name="community_mall">社区商城</string>
    <string name="community_notice">温馨提示</string>
    <string name="easy_service">便民服务</string>
    <string name="community_finance">社区金融</string>

    <string name="unlocking">开锁</string>
    <string name="monitor">监控</string>
    <string name="call_police">安防报警</string>
    <string name="smart_home">智能家居</string>
    <string name="call_property">呼叫物业</string>
    <string name="dial_plate">社区电话</string>
    <string name="personal">个人中心</string>
    <string name="local_mall">本地商城</string>
    <string name="community_life">社区生活</string>
    <string name="community_service">社区服务</string>

    <string name="surrounding_merchants">周边商户</string>
    <string name="property_service">物业服务</string>
    <string name="community_group_buy">社区团购</string>
    <string name="duty_lawyer_service">律师服务</string>
    <string name="community_hospital">社区医院</string>
    <string name="car_rental_instead_of_driving">租车代驾</string>
    <string name="retirement_care">养老医疗</string>
    <string name="express">快递代收</string>
    <string name="second_hand_goods">二手物品</string>


    <!--公告-->
    <string name="have_sign">已读</string>
    <string name="havnt_sign">未读</string>

    <!--便民服务-->
    <string name="bus_info">公交出行</string>
    <string name="shop_info">周边商家</string>

    <string name="easy_hotel">酒店</string>
    <string name="easy_life">生活服务</string>
    <string name="easy_landry">洗衣</string>
    <string name="easy_entertain">休闲娱乐</string>
    <string name="easy_movie">电影</string>
    <string name="easy_food">美食</string>
    <string name="easy_ktv">KTV</string>
    <string name="easy_coffee">咖啡</string>
    <string name="easy_gym">健身</string>
    <string name="easy_parking">停车</string>
    <string name="easy_facial">美容</string>
    <string name="easy_traval">旅游</string>
    <string name="tianqi">天气查询</string>
    <string name="weizhang">违章查询</string>
    <string name="jipiao">机票查询</string>
    <string name="moving_service">搬家服务</string>
    <string name="errand_service">跑腿服务</string>
    <string name="mother_to_child_service">母婴服务</string>
    <string name="decoration_price">装饰价格</string>
    <string name="formaldehyde_treatment">甲醛治理</string>
    <!--周边商户-->

    <!--物业服务-->
    <string name="community_act">社区活动</string>
    <string name="property_notice">物业通知</string>
    <string name="community_survey">社区调查</string>
    <string name="repair">物业报修</string>
    <string name="payment">物业缴费</string>
    <string name="community_bbs">社区论坛</string>

    <!--商铺主页-->

    <!--店铺详情-->

    <!--店铺首页-->

    <!--支付方式-->
    <string name="zhi_fu_bao_pay_title">支付宝支付</string>
    <string name="zhi_fu_bao_pay_intro">安全快捷，可支持银行卡支付</string>
    <string name="wei_xin_pay_title">微信支付</string>
    <string name="wei_xin_pay_intro">推荐已在微信中绑定银行卡的用户使用</string>
    <string name="yin_lian_pay_title">银联在线支付</string>
    <string name="yin_lian_pay_intro">推荐已持有网银的用户使用</string>

    <!--商品详细-->

    <!--购物车-->

    <!--订单-->

    <!--我的-->
    <string name="my_orders">我的订单</string>
    <string name="shop_order">商城订单</string>
    <string name="pay_history">缴费记录</string>
    <string name="my_activity">我的活动</string>
    <string name="my_complain">我的投诉</string>
    <string name="my_repair">我的报修</string>
    <string name="my_appointment">预约及到访</string>
    <string name="my_community_info">我的分类信息</string>
    <string name="my_express">我的快递</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_score">我的积分</string>

    <!--物业缴费-->
    <string name="have_paied">已缴费</string>
    <string name="havnt_paied">未缴费</string>
    <string name="pls_input">请输入</string>
    <string name="pls_choose">请选择</string>
    <string name="owner_name">业主姓名</string>
    <string name="mobile_num">手机号</string>
    <string name="community">小区</string>
    <string name="building_num">楼栋/弄</string>
    <string name="unit_num">单元/号</string>
    <string name="room_num">门牌/房号</string>
    <string name="confirm2">认证</string>
    <string name="house_pay">结算</string>
    <string name="search_range">查询范围</string>
    <string name="month">月份</string>
    <string name="year">年份</string>
    <string name="pay_time">缴费时间</string>
    <string name="pay_item">缴费项目</string>
    <string name="pay_amount">金额(元)</string>

    <!--家园活动-->
    <string name="activity_detail">活动详细>></string>
    <string name="all_act">社区活动</string>
    <string name="I_start_up">我发起的</string>
    <string name="I_take_in">我参与的</string>
    <string name="act_take_in">参加活动</string>
    <string name="member_already_take_in">已参加活动的人员</string>

    <!--论坛活动-->
    <string name="start_forum">发表帖子</string>
    <string name="start_activity">发起活动</string>
    <string name="title">标题</string>
    <string name="pls_input_content">请输入内容</string>
    <string name="pls_add_img">添加图片</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="activity_address">活动地点</string>
    <string name="next_step">下一步</string>

    <!--到访-->
    <string name="visitor">到 访 人: </string>
    <string name="host">拜访人: </string>
    <string name="room">拜访房间: </string>
    <string name="visitor_num">到访人数: </string>
    <string name="car_plate_num">车牌号: </string>
    <string name="host_tel">拜访人电话: </string>
    <string name="stay_time">预计停留时间: </string>
    <string name="visitor_img">到访人照片: </string>
    <string name="refuse_visit">拒绝到访</string>
    <string name="agree_visit">同意进入</string>
    <string name="not_at_home">我不在家</string>

    <string name="change"><u>切换</u></string>

    <!--极光推送配置信息-->
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="setting_su">设置成功</string>


    <!--********微信支付 配置*************************************************-->
    <string name="app_back">返回</string>
    <string name="app_tip">提示</string>

    <!-- applet -->

    <!-- verify -->

    <!-- format -->

    <string name="please_">请先认证业主信息</string>
    <string name="manager_cannot">管理员不可操作</string>


    <!-- WXMediaMessage -->

    <!-- GetFromWXActivity -->

    <!-- PayActivity -->

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>

    <!-- BC-test -->
    <!--********微信支付 配置*************************************************-->


    <!--*********************************************************************************-->

    <!--投诉-->
    <!--<string name="my_complait">我的投诉</string>-->


    <!--二手交易-->
    <string name="wo_yao_zhuan">我要转</string>
    <string name="wo_yao_gou">我要购</string>
    <string name="baobei_title">宝贝标题:</string>
    <string name="baobei_detail">宝贝描述:</string>
    <string name="baobei_image">宝贝图片:</string>
    <string name="contact">联系人:</string>
    <string name="contact_telephone">联系电话:</string>

    <string name="superman_ok">确 定</string>
    <string name="superman_cancel">取 消</string>


    <!--房产信息-->
    <string name="no_data">没有找到符合条件的城市</string>

    <!--特约服务-->
    <string name="my_order_service">我的预约</string>


    <string name="current_plot">当前小区</string>
    <string name="not_found_owner_information">未找到业主信息，请添加房屋</string>
    <string name="visitor_want_to_register">游客尚未注册，是否注册</string>
    <string name="not_found_owner_information_and_go_on">未找到业主信息，是否继续使用</string>
    <string name="usename_null">用户名不可为空</string>
    <string name="pwd_null">密码不可为空</string>
    <string name="floor">楼</string>
    <string name="comment">评论</string>
    <string name="initiator">发起人：</string>
    <string name="btn_ok">确定</string>
    <string name="network_error">无法连接到网络</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">加载中,请稍后...</string>
    <string name="socket_time_out">请求超时，请检查网络连接</string>

    <!-- 录音 -->
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>

    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="app_id">595f3e62</string>
    <string name="text_begin">请开始说话…</string>
</resources>
