<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingLeft="@dimen/activity_padding"
    android:paddingRight="@dimen/activity_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/login_logo"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:layout_marginBottom="@dimen/activity_padding"/>

        <!-- 用户名-->
        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/login_edit"
            android:paddingLeft="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_padding_small"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/login_icon_02"/>

            <EditText
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/activity_padding_small"
                android:inputType="phone"
                android:maxLength="11"
                android:background="@null"
                android:textSize="@dimen/sp_16"
                android:text=""
                android:textColorHint="#ebebeb"
                android:textColor="#ebebeb"
                android:hint="@string/login_text"/>

        </LinearLayout>

        <!-- 密码-->
        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/login_edit"
            android:paddingLeft="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:paddingLeft="@dimen/activity_padding_small"
                android:src="@drawable/login_icon_01"/>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:padding="@dimen/activity_padding_small"
                android:background="@null"
                android:textSize="@dimen/sp_16"
                android:textColor="#ebebeb"
                android:textColorHint="#ebebeb"
                android:hint="@string/password"/>

        </LinearLayout>

        <!-- 登录-->
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_white"
                android:background="@drawable/login_btn"
                android:textSize="18sp"
                android:text="@string/login_btn"/>

        </LinearLayout>

        <!-- 忘记密码-->
        <LinearLayout
            android:id="@+id/forget_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/forget_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:padding="@dimen/dp_10"
                android:textSize="13sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/white"/>
            <TextView
                android:id="@+id/regest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regest_login"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:padding="@dimen/dp_10"
                />


        </LinearLayout>

    </LinearLayout>

    <!-- 注册-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_padding"
        android:layout_alignParentBottom="true">

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding_small"
            android:layout_marginRight="@dimen/activity_padding"
            android:textSize="@dimen/LargeTextSize"
            android:background="@drawable/white_border_shap"
            android:text="@string/regest"
            android:textColor="#8fc4b0"/>

        <TextView
            android:id="@+id/visiter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding_small"
            android:layout_marginLeft="@dimen/activity_padding"
            android:textSize="@dimen/LargeTextSize"
            android:background="@drawable/white_border_shap"
            android:text="@string/visiter"
            android:visibility="gone"
            android:textColor="#8fc4b0"/>

    </LinearLayout>
</RelativeLayout>