<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--主页按钮-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_bg"
                android:orientation="vertical"
                >
                <!--top背景部分-->
                <com.stx.xhb.xbanner.XBanner
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/banner_property_service"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/banner"
                    app:pointsPosition="CENTER"
                    app:AutoPlayTime="6000"
                    app:pointsContainerBackground="#44aaaaaa"
                    />
                <TextView
                    android:text="@string/property_service"
                    style="@style/inside_title"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="8dp">
                    <!--投诉报修-->
                    <LinearLayout
                        android:id="@+id/complaint_repair"
                        style="@style/inside_ll_style">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/repair"/>

                        <View
                            style="@style/inside_line"
                            />

                        <TextView
                            android:text="@string/repair"
                            style="@style/inside_tv_style"/>
                    </LinearLayout>
                    <!--物业缴费-->
                    <LinearLayout
                        android:id="@+id/payment"
                        style="@style/inside_ll_style"
                        android:layout_marginLeft="@dimen/dp_10">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/payment"
                            />
                        <View
                            style="@style/inside_line"
                            />

                        <TextView
                            style="@style/inside_tv_style"
                            android:text="@string/payment"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="8dp">
                    <LinearLayout
                        android:id="@+id/community_act"
                        style="@style/inside_ll_style">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/act"
                            />
                        <View
                            style="@style/inside_line"
                            />

                        <TextView
                            style="@style/inside_tv_style"
                            android:text="@string/community_act"
                            />
                    </LinearLayout>
                    <!--社区调查-->
                    <LinearLayout
                        android:id="@+id/community_survey"
                        style="@style/inside_ll_style"
                        android:layout_marginLeft="@dimen/dp_10">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/survey"
                            />
                        <View
                            style="@style/inside_line"
                            />

                        <TextView
                            style="@style/inside_tv_style"
                            android:text="@string/community_survey"
                            />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10">
                    <!--物业通知-->
                    <LinearLayout
                        android:id="@+id/property_notice"
                        style="@style/inside_ll_style">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/notice"
                            />
                        <View
                            style="@style/inside_line"
                            />

                        <TextView
                            style="@style/inside_tv_style"
                            android:text="@string/property_notice"
                            />
                    </LinearLayout>
                    <!--社区论坛-->
                    <LinearLayout
                        android:id="@+id/community_bbs"
                        style="@style/inside_ll_style"
                        android:layout_marginLeft="@dimen/dp_10">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/bbs"
                            />
                        <View
                            style="@style/inside_line"/>

                        <TextView
                            style="@style/inside_tv_style"
                            android:text="@string/community_bbs"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <com.stx.xhb.xbanner.XBanner
                android:visibility="gone"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/banner_property_service_bottom"
                app:pointsPosition="CENTER"
                app:AutoPlayTime="6000"
                app:pointsContainerBackground="#44aaaaaa"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bottom_banner"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>