<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <!--header-->
    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_padding"
        android:gravity="center"
        android:orientation="vertical">

        <!--注册信息部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bg"
            android:orientation="vertical">

            <!--手机号码-->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding_smaller"
                android:background="@color/white"
                android:hint="@string/pls_input_mailbox_or_mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingTop="@dimen/activity_padding"
                android:textColorLink="@color/text_gray"
                android:textCursorDrawable="@null"/>

            <RelativeLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <!--密码-->
                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/pls_set_6_20_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/activity_padding"
                    android:paddingLeft="@dimen/activity_padding"
                    android:paddingRight="@dimen/activity_padding"
                    android:paddingTop="@dimen/activity_padding"
                    android:textColorLink="@color/text_gray"
                    android:textCursorDrawable="@null"/>

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/checkbox_eclipse_selector"
                    android:clickable="false"
                    android:paddingRight="@dimen/activity_padding"/>

            </RelativeLayout>

        </LinearLayout>

        <!--注册按钮-->
        <Button
            android:id="@+id/registe_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_padding"
            android:background="@drawable/gray_bg_shap"
            android:clickable="false"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/LargeTextSize"/>
    </LinearLayout>
</LinearLayout>



