<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forum_start_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="com.ctrl.android.kcetong.ui.activity.ForumStartNoteActivity">
<include
    android:id="@+id/include"
    layout="@layout/include_toolbar">
</include>
    <ScrollView
        android:layout_below="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--标题-->
            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding_small"
                android:padding="@dimen/activity_padding_small"
                android:textSize="@dimen/LargeTextSize"
                android:textColor="@color/text_gray"
                android:hint="@string/title"
                android:background="@color/white"/>

            <!--内容-->
            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding_small"
                android:padding="@dimen/activity_padding_small"
                android:textSize="@dimen/LargeTextSize"
                android:textColor="@color/text_gray"
                android:hint="@string/pls_input_content"
                android:gravity="top"
                android:minHeight="200dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding_small"
                android:background="@color/white"
                android:textSize="@dimen/LargeTextSize"
                android:text="@string/pls_add_img"/>

            <!--添加图片-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/img_01"
                    android:layout_width="@dimen/image_small_height"
                    android:layout_height="@dimen/image_small_height"
                    android:layout_marginLeft="@dimen/activity_padding_small"
                    android:background="@drawable/green_add_img_icon"
                    >
                    <ImageView
                        android:id="@+id/uploadImage1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        />
                    <ImageView
                        android:id="@+id/del_up_1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@mipmap/comment_pic_default"
                        android:scaleType="fitCenter"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:visibility="gone"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/img_02"
                    android:layout_width="@dimen/image_small_height"
                    android:layout_height="@dimen/image_small_height"
                    android:layout_marginLeft="@dimen/activity_padding_small"
                    android:background="@drawable/green_add_img_icon"
                    android:visibility="gone"
                    >
                    <ImageView
                        android:id="@+id/uploadImage2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        />
                    <ImageView
                        android:id="@+id/del_up_2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@mipmap/comment_pic_default"
                        android:scaleType="fitCenter"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/img_03"
                    android:layout_width="@dimen/image_small_height"
                    android:layout_height="@dimen/image_small_height"
                    android:layout_marginLeft="@dimen/activity_padding_small"
                    android:background="@drawable/green_add_img_icon"
                    android:visibility="gone"
                    >
                    <ImageView
                        android:id="@+id/uploadImage3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        />
                    <ImageView
                        android:id="@+id/del_up_3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        android:src="@mipmap/comment_pic_default"
                        android:scaleType="fitCenter"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
